# miniclip

./: pyproject.toml
data/augmented/: metadata.csv
notebooks/: augmentation.ipynb  cnn.ipynb  dataset.ipynb  small_bert.ipynb  text_classification.ipynb  text_config.pickle  tokenizer.pickle
notebooks/.ipynb_checkpoints/: cnn-checkpoint.ipynb  small_bert-checkpoint.ipynb
notebooks/models_forclip/: best_smallbert.keras  text_encoder_for_clip.keras
